--- a/index.html
+++ b/index.html
@@ -56,24 +56,37 @@
 
     <!-- Jumbotron -->
     <div
+      class="jumbotron jumbotron-fluid"
       style="
         background: url(https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/jumbotron.png)
           no-repeat;
         background-size: cover;
       "
-    ></div>
+    >
+      <div class="bg-secondary my-5">
+        <h1 class="display-3 text-center text-light">
+          Administration made easy
+        </h1>
+        <p class="text-light text-center">
+          Adhoc is an on-demand administrative service for your company growth
+        </p>
+      </div>
+    </div>
 
     <!-- Container -->
     <div class="container">
       <!-- Quote Section -->
-      <div class="row">
+      <div class="row my-5">
         <div class="col">
-          <h2>
+          <h2 class="font-italic font-weight-light text-left">
             "Thanks to Adhoc we now have beautiful and faithful service every
             day. Our customers are happy and engagement has drastically
             increased. Highly recommend!"
           </h2>
-          <p>-Dave Ellavar, <span>Academy of Code</span></p>
+          <p class="font-italic font-weight-bold">
+            -Dave Ellavar,
+            <span class="font-weight-light">Academy of Code</span>
+          </p>
         </div>
       </div>
       <hr />
