Added the why adhoc row

--- a/index.html
+++ b/index.html
@@ -92,24 +92,59 @@
       <hr />
 
       <!-- Why Adhoc? Text -->
-      <div class="row">
-        <div class="col">
-          <h2>Why Adhoc?</h2>
+      <div class="row my-5 justify-content-center">
+        <div>
+          <h2 class="display-4">Why Adhoc?</h2>
         </div>
       </div>
 
       <!-- Image Reasons Section -->
-      <div class="row">
-        <div class="col">
+      <div class="row justify-content-center">
+        <div class="col-8 col-md-4">
           <!-- First card goes here -->
+          <div class="card border-light">
+            <img
+              class="card-img-top"
+              src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/experienced.png"
+              alt="experienced icon"
+            />
+            <div class="card-body">
+              <p class="card-text text-center">
+                Over 9000 happy clients, and we learn something new from each
+                one.
+              </p>
+            </div>
+          </div>
         </div>
 
-        <div class="col">
+        <div class="col-8 col-md-4">
           <!-- Second card goes here -->
+          <div class="card border-light">
+            <img
+              class="card-img-top"
+              src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/fun.png"
+              alt="fun icon"
+            />
+            <div class="card-body">
+              <p class="card-text text-center">
+                Administration? Fun? Yea, somehow we make it happen.
+              </p>
+            </div>
+          </div>
         </div>
 
-        <div class="col">
+        <div class="col-8 col-md-4">
           <!-- Third card goes here -->
+          <img
+            class="card-img-top"
+            src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/smart.png"
+            alt="smart icon"
+          />
+          <div class="card-body">
+            <p class="card-text text-center">
+              Innovative solutions to the trickest of everyday tasks.
+            </p>
+          </div>
         </div>
       </div>
 
