--- a/index.html
+++ b/index.html
@@ -149,34 +149,45 @@
       </div>
 
       <!-- Meet the Team Section -->
-      <div class="row">
+      <div class="row bg-dark rounded-top">
         <div class="col">
-          <h2>Meet the Team</h2>
+          <h2 class="text-light text-center display-4">Meet the Team</h2>
         </div>
       </div>
 
       <!-- Team Pictures Carousel -->
-      <div class="row">
+      <div class="row bg-dark rounded-bottom">
         <div class="col">
           <!-- Carousel Component -->
           <div
             id="carouselExampleControls"
-            class="carousel slide"
+            class="carousel slide w-50 mx-auto"
             data-ride="carousel"
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/brian.png" class="d-block w-100" alt="picture of Brian M. the CEO." />
+                <div class="carousel-caption bg-dark rounded-pill py-0">
+                  <p class="font-weight-bold text-center mb-0">CEO: <span class="font-weight-light">Brian</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/andy.png" class="d-block w-100" alt="picture of Andy C. the CFO." />
+                <div class="carousel-caption bg-dark rounded-pill py-0">
+                  <p class="font-weight-bold text-center mb-0">CFO: <span class="font-weight-light">Andy</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/angela.png" class="d-block w-100" alt="picture of Angela W. the COO." />
+                <div class="carousel-caption bg-dark rounded-pill py-0">
+                  <p class="font-weight-bold text-center mb-0">COO: <span class="font-weight-light">Amie</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
-              </div>
+                <img src="https://content.codecademy.com/courses/learn-bootstrap-4/adhoc/amie.png" class="d-block w-100" alt="picture of Amie S. the CTO." />
+                <div class="carousel-caption bg-dark rounded-pill py-0">
+                  <p class="font-weight-bold text-center mb-0">CTO: <span class="font-weight-light">Amie</span></p>
+                </div>
             </div>
             <a
               class="carousel-control-prev"
@@ -208,7 +219,7 @@
     </div>
 
     <!-- Footer -->
-    <footer>2019 Adhoc &copy;</footer>
+    <footer class="text-center">2019 Adhoc &copy;</footer>
 
     <!-- Bootstrap's JavaScript Files -->
     <script
